fix admin permission
