# docs/swagger.yaml
@@ -105,6 +105,8 @@ definitions:
         type: integer
       name:
         type: string
+      role:
+        type: string
       updated_at:
         type: string
     type: object
@@ -115,6 +117,8 @@ definitions:
       name:
         type: string
       password:
+        type: string
+      role:
         type: string
     type: object
 host: localhost:8080
@@ -330,6 +334,31 @@ paths:
       security:
       - BearerAuth: []
       summary: Get order details
+      tags:
+      - orders
+  /orders/admin:
+    get:
+      description: Get all orders (admin only)
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Order'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "403":
+          description: Forbidden
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Get all orders (admin)
       tags:
       - orders
   /products:
